# potato-gpt

etc/: rc.local
root/potato-gpt/: Cargo.toml  README.txt
root/potato-gpt/src/: main.rs
