[package]
name = "potato-gpt"
version = "0.0.1"
authors = ["someStranger8", "Icosa"]
edition = "2021"
description = "ChatGPT on a raspberry pi"
repository = "https://github.com/someStranger8/potato-gpt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tts_rust = "0.3.5"
